--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7477374888832083"
-     crossorigin="anonymous"></script>
+ <meta name="google-adsense-account" content="ca-pub-7477374888832083">
 </head>
 <body>
   <div id="root"></div>
